--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<html class=“bguo”><head>
-
-  <link rel="stylesheet" type="text/css" href="main.css">
+<html>
+  <head>
 
   <title>website</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
-<body data-gr-c-s-loaded="true" class="vsc-initialized">
+<body>
 
   <p>x</p>
 
