--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="index.html">News</a>
+  <a href="about.html">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
   </div>
