--- a/about.html
+++ b/about.html
@@ -1,1 +1,24 @@
 
+<html>
+  <head>
+
+  <title>website</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+
+</head>
+
+<body>
+
+  <p>x</p>
+
+  <p>xx</p>
+
+  <p>xxx</p>
+
+  <p>xxxx</p>
+
+
+
+
+
+</body></html>
