--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
 
@@ -8,6 +7,12 @@
 </head>
 
 <body>
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="about.html">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  </div>
 
   <p>x</p>
 
