--- a/about.html
+++ b/about.html
@@ -9,9 +9,10 @@
 <body>
   <div class="topnav">
   <a class="active" href="index.html">Home</a>
-  <a href="about.html">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="about.html">About Me</a>
+  <a href="#contact">Soccer</a>
+  <a href="#about">Projects</a>
+  <a href="#about">Other Stuff</a>  
   </div>
 
   <h1> About me <h1>
