--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
   <a href="#about">Other Stuff</a>  
   </div>
 
-  <p>x</p>
+  <p>Hello, I'm Brandon Guo.</p>
 
-  <p>xx</p>
+  <p>This is my website. Navigate it with the bar up top.</p>
 
-  <p>xxx</p>
-
-  <p>xxxx</p>
+  <p>If you would like to contact me, email brandon49623@gmail.com.</p>
 
 
 
