--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <a href="#about">Other Stuff</a>  
   </div>
 
-  <p>Hello, I'm Brandon Guo.</p>
+  <p align = "center">Hello, I'm Brandon Guo.</p>
 
-  <p>This is my website. Navigate it with the bar up top.</p>
+  <p align = "center">This is my website. Navigate it with the bar up top.</p>
 
-  <p>If you would like to contact me, email brandon49623@gmail.com.</p>
+  <p align = "center">If you would like to contact me, email brandon49623@gmail.com.</p>
 
 
 
