--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
   <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="about.html">About Me</a>
-  <a href="#contact">Soccer</a>
-  <a href="#about">Projects</a>
-  <a href="#about">Other Stuff</a>  
+  <a href="soccer.html">Soccer</a>
+  <a href="projects.html">Projects</a>
+  <a href="other.html">Other Stuff</a>  
   </div>
 
   <h1> About me <h1>
