--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </div>
 
   <p align = "center">Hello, I'm Brandon Guo.</p>
+  
+  <p align = "center">I'm currently a junior at Monta Vista High School. </p>
 
   <p align = "center">This is my website. Navigate it with the bar up top.</p>
 
