--- a/about.html
+++ b/about.html
@@ -15,14 +15,14 @@
   <a href="other.html">Other Stuff</a>  
   </div>
 
-  <h1> About me <h1>
+  <h2 text = "center"> About Brandon Guo <h2>
 
-  <p>xx</p>
+  <p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my bike, run, and play chess. I am an avid
+    listener of classical (orchestral and solo piano) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
+    enjoy playing soccer with De Anza Force and my school team, so much so that I dedicate a webpage to it. </p>
 
-  <p>xxx</p>
-
-  <p>xxxx</p>
-
+  <p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my 
+    (current) <a href=''>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
 
 
 
