--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <a href="other.html">Other Stuff</a>  
   </div>
 
-  <h2 text = "center"> About Brandon Guo <h2>
+  <h2 align = "center"> About Brandon Guo <h2>
 
   <p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my bike, run, and play chess. I am an avid
     listener of classical (orchestral and solo piano) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
