--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     enjoy playing soccer with De Anza Force and my school team, so much so that I dedicate a webpage to it. </p>
 
   <p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my 
-    (current) <a href=''>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
+    (current) <a href='bg49623.github.io/Resume (9).pdf'>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
 
 
 
