--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <p align = "center">This is my website. Navigate it with the bar up top.</p>
 
-  <p align = "center">If you would like to contact me, email brandon49623@gmail.com.</p>
+  <p align = "center">If you would like to contact me, <a href="mailto:brandon49623@gmail.com">email me</a></p>
 
 
 
