--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   
   <p align = "center">I'm currently a junior at Monta Vista High School. </p>
 
-  <p align = "center">This is my website. Navigate it with the bar up top.</p>
+  <p align = "center">This is my website. Navigate it with the bar up top. Clearly, it is still under some degree of construction. I have considered and decided against 
+    any fancy formatting. Maybe some CSS will impress me down the line.</p>
 
   <p align = "center">If you would like to contact me, <a href="mailto:brandon49623@gmail.com">email me</a></p>
 
