--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
   <h2 align = "center"> About Brandon Guo </h2>
 
-  <p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my bike, run, and play chess. I am an avid
+  <p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my <a href = 'https://www.strava.com/athletes/34478762'>bike</a>, <a href = 'https://www.strava.com/athletes/34478762'>run</a>, and <a href = 'https://www.chess.com/member/bguo'>play chess</a>. I am an avid
     listener of classical (orchestral and solo piano) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
     enjoy playing soccer with De Anza Force and my school team, so much so that I dedicate a webpage to it. </p>
 
