--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
   <p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my <a href = 'https://www.strava.com/athletes/34478762'>bike</a>, <a href = 'https://www.strava.com/athletes/34478762'>run</a>, and <a href = 'https://www.chess.com/member/bguo'>play chess</a>. I am an avid
     listener of classical (orchestral and solo piano) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
-    enjoy playing soccer with De Anza Force and my school team, so much so that I dedicate a webpage to it. </p>
+    enjoy playing soccer with <a href = 'http://norcalpremier.com/club/5051/team/1049916/'>De Anza Force</a> and <a href = 'http://www.maxpreps.com/high-schools/monta-vista-matadors-(cupertino,ca)/soccer-winter/home.htm'>my school team</a>, so much so that I dedicate a webpage to it. </p>
 
   <p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my 
     (current) <a href='bg49623.github.io/Resume.pdf'>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
