--- a/soccer.html
+++ b/soccer.html
@@ -1,1 +1,27 @@
 
+<html>
+  <head>
+
+  <title>website</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+
+</head>
+
+<body>
+  <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about.html">About Me</a>
+  <a href="soccer.html">Soccer</a>
+  <a href="projects.html">Projects</a>
+  <a href="other.html">Other Stuff</a>  
+  </div>
+  
+I am a goalkeeper. This page has certain highlights that I have regarding my soccer experience. Our school has purchased Hudl, software that 
+  allows me to easily share excerpts of my play, so credit to them for the recording and software.
+  
+I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. 
+
+
+
+
+</body></html>
