--- a/soccer.html
+++ b/soccer.html
@@ -16,10 +16,14 @@
   <a href="other.html">Other Stuff</a>  
   </div>
   
-I am a goalkeeper. This page has certain highlights that I have regarding my soccer experience. Our school has purchased Hudl, software that 
-  allows me to easily share excerpts of my play, so credit to them for the recording and software.
   
-I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. 
+<h2 align = "center"> About Brandon Guo </h2>
+
+  
+<p>I am a goalkeeper. This page has certain highlights that I have regarding my soccer experience. Our school has purchased Hudl, software that 
+  allows me to easily share excerpts of my play, so credit to them for the recording and software.</p>
+  
+<p>I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. </p>
 
 
 
