--- a/soccer.html
+++ b/soccer.html
@@ -17,7 +17,7 @@
   </div>
   
   
-<h2 align = "center"> About Brandon Guo </h2>
+<h2 align = "center"> Soccer </h2>
 
   
 <p>I am a goalkeeper. This page has certain highlights that I have regarding my soccer experience. Our school has purchased Hudl, software that 
