--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,29 @@
 
+<html>
+  <head>
+
+  <title>website</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+
+</head>
+
+<body>
+  <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about.html">About Me</a>
+  <a href="soccer.html">Soccer</a>
+  <a href="projects.html">Projects</a>
+  <a href="other.html">Other Stuff</a>  
+  </div>
+
+  <h2 align = "center">My Projects </h2>
+  
+  <h3 align = "center"> Speed versus Gradient of my Bike Rides </h3>
+  
+  <img src="speedgrad.png" alt="Graph" align = "center">
+  
+  <p> blah blah </p>
+
+
+
+</body></html>
