--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
   
   <h3 align = "center"> Speed versus Gradient of my Bike Rides </h3>
   
-  <img src="speedgrad.png" alt="Graph" align = "center">
+  <img src="speedgrad.png" alt="Graph" align = "center" style = "width: 300px; height : 200px">
   
   <p> blah blah </p>
 
