--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
   
   <h3 align = "center"> Speed versus Gradient of my Bike Rides </h3>
   
-  <img src="speedgrad.png" align = "center" style = "width: 600px; height : 500px">
+  <img src="speedgrad.png" class = "center" style = "width: 600px; height : 500px">
   
   <p> blah blah </p>
 
