--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
   
   <h3 align = "center"> Speed versus Gradient of my Bike Rides </h3>
   
-  <img src="speedgrad.png" alt = "centered image" style = "width: 600px; height : 500px">
+  <center><img src="speedgrad.png" style = "width: 600px; height : 500px"></center>
   
   <p> Analyzed the speed and gradient of my bike rides with Python and a bit of maths. Converted the gpx files native to Strava into a dataframe of GPS values.
     I did not have access to Google Earth's API, so speed was estimated mathematically. Because the distance covered in small time intervals subtended a very small
