--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 
   <h2 align = "center">My Projects </h2>
   
-  <h3 align = "center"> Speed versus Gradient of my Bike Rides </h3>
+  <h3 align = "center"> Speed versus Gradient of my Bike Rides (10/2018) </h3>
   
   <center><img src="speedgrad.png" style = "width: 600px; height : 500px"></center>
   
