--- a/soccer.html
+++ b/soccer.html
@@ -20,10 +20,14 @@
 <h2 align = "center"> Soccer </h2>
 
   
-<p>I am a goalkeeper. This page has certain highlights that I have regarding my soccer experience. Our school has purchased Hudl, software that 
-  allows me to easily share excerpts of my play, so credit to them for the recording and software.</p>
+<p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
+  "recruiting website", wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
   
-<p>I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. </p>
+<h3 align = "center"> Background </h3>
+  
+
+<h3 align = "center"> Media </h3>
+  
 
 
 
