--- a/soccer.html
+++ b/soccer.html
@@ -25,6 +25,17 @@
   
 <h3 align = "center"> Background </h3>
   
+  <p> I have been playing soccer as a goalkeeper for close to 10 years now. For the majority of this decade, I have played club soccer with De Anza Force. 
+    Throughout middle school, I developed greatly through the program's rigorous goalkeeper training, both via clinics and integration with the team.
+    When I entered high school, I began to take the sport more seriously, and tried out for the Force I team, which played in Premier at the time. I was very fortunate
+    to be accepted on the team and train with the team as well as the Force Academy. Through such training, I have played with and against some of the most talented
+    soccer players I know, empowering me to become a much better goalkeeper. </p>
+  
+  <p> I also play school soccer for my high school, Monta Vista. During my freshman year, I was the goalie for the Junior Varsity team. The next year, I played as a backup 
+    for the varsity team, under one of the senior goalkeepers. As a junior, I am currently the starting keeper for the team, with a save rate of 0.8 and a shutout rate of 0.5.</p>
+  
+  <p> Outside of league play, my past teams have rarely attended tournaments (Surf, Showcase, and the like); this is definitely an experience I am excited to experience given my participation in soccer during college. </p>
+    
 
 <h3 align = "center"> Media </h3>
   
