--- a/soccer.html
+++ b/soccer.html
@@ -21,7 +21,7 @@
 
   
 <p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
-  "recruiting website", wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
+  "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
   
 <h3 align = "center"> Background </h3>
   
