--- a/soccer.html
+++ b/soccer.html
@@ -39,6 +39,8 @@
 
 <h3 align = "center"> Media </h3>
   
+  
+<iframe src='//www.hudl.com/embed/video/3/12317105/5c33be98ab92ae11d88f1b1f' width='640' height='360' frameborder='0' allowfullscreen></iframe>
 
 
 
