--- a/soccer.html
+++ b/soccer.html
@@ -40,7 +40,7 @@
 <h3 align = "center"> Media </h3>
   
   
-<iframe src='//www.hudl.com/embed/video/3/12317105/5c33be98ab92ae11d88f1b1f' width='640' height='360' frameborder='0' allowfullscreen></iframe>
+<center><iframe src='//www.hudl.com/embed/video/3/12317105/5c33be98ab92ae11d88f1b1f' width='480' height='270' frameborder='0' allowfullscreen></iframe></center>
 
 
 
