--- a/soccer.html
+++ b/soccer.html
@@ -38,7 +38,7 @@
     
 
 <h3 align = "center"> Media </h3>
-  <p> Unfortunately, I only have media from my current season of school soccer, as our coached purchased Hudl. Unfortunately, I cannot download these clips until the end of the season,
+  <p> Unfortunately, I only have media from my current season of school soccer; this season, our coach purchased Hudl to facilitate video recording of games. Unfortunately, I cannot download these clips until the end of the season,
     but they are embedded in the website design here. Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate video, or something. </p>
   
 <center><iframe src='//www.hudl.com/embed/video/3/12317105/5c33be98ab92ae11d88f1b1f' width='480' height='270' frameborder='0' allowfullscreen></iframe></center>
