--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <title>website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-
+  <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
 </head>
 
 <body>
