--- a/soccer.html
+++ b/soccer.html
@@ -36,10 +36,16 @@
   
   <p> Outside of league play, my past teams have rarely attended tournaments (Surf, Showcase, and the like); this is definitely an experience I am excited to experience given my participation in soccer during college. </p>
     
-
+<h3 align = "center"> Values/Philosophies <h3>
+  <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the Nth best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
+    quite cirumstantial, and I hesitate to make such associated judgments. What I do think is notable, however, is my general approach to the position.</p>
+  <p> My vision of the keeper position derives from the "field player first, keeper second" mentality. Goalkeeping is uncannily like playing fullback with the extra privilege of the hands. A fullback throughout a game will receive many passes from 
+    their forwards, mids, etc. I like to encourage the team to treat me similarly as means of achieving depth. Similarly, that means attacking through balls played by the opponent, even if it demands the feet. I like to think of the ability to use hands
+    as a privilege and push myself to make the most out of such privilege. </p>
+  <p> I love to challenge myself by playing possession/passing games with the rest of my team, as it builds the proper technique that I believe is essential to the position itself. Perhaps evidence of such a mentality manifests itself in media.</p>
 <h3 align = "center"> Media </h3>
   <p> Unfortunately, I only have media from my current season of school soccer; this season, our coach purchased Hudl to facilitate video recording of games. Unfortunately, I cannot download these clips until the end of the season,
-    but they are embedded in the website design here. Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate video, or something. </p>
+    but they are embedded in the website design here (as such, slow loading is possible). Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate video, or something. </p>
   
 <center><iframe src='//www.hudl.com/embed/video/3/12317105/5c33be98ab92ae11d88f1b1f' width='480' height='270' frameborder='0' allowfullscreen></iframe></center>
 
