--- a/soccer.html
+++ b/soccer.html
@@ -36,7 +36,7 @@
   
   <p> Outside of league play, my past teams have rarely attended tournaments (Surf, Showcase, and the like); this is definitely an experience I am excited to experience given my participation in soccer during college. </p>
     
-<h3 align = "center"> Values/Philosophies <h3>
+<h3 align = "center"> Values/Philosophies </h3>
   
   <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the Nth best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
     quite cirumstantial, and I hesitate to make such associated judgments. What I do think is notable, however, is my general approach to the position.</p>
