--- a/soccer.html
+++ b/soccer.html
@@ -45,10 +45,9 @@
     as a privilege and push myself to make the most out of such privilege. </p>
   <p> I love to challenge myself by playing possession/passing games with the rest of my team, as it builds the proper technique that I believe is essential to the position itself. Perhaps evidence of such a mentality manifests itself in media.</p>
 <h3 align = "center"> Media </h3>
-  <p> Unfortunately, I only have media from my current season of school soccer; this season, our coach purchased Hudl to facilitate video recording of games. Unfortunately, I cannot download these clips until the end of the season,
-    but they are embedded in the website design here (as such, slow loading is possible). Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate video, or something. </p>
+  <p> Unfortunately, I only have media from my current season of school soccer; this season, our coach purchased Hudl to facilitate video recording of games. Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate montage, or something. 
+  Some of these clips in here might be from my training, mostly because of how short the scholastic season is. </p>
   
-<center><iframe src='//www.hudl.com/embed/video/3/12317105/5c33be98ab92ae11d88f1b1f' width='480' height='270' frameborder='0' allowfullscreen></iframe></center>
 
 
 
