--- a/soccer.html
+++ b/soccer.html
@@ -34,7 +34,7 @@
   <p> I also play school soccer for my high school, Monta Vista. During my freshman year, I was the goalie for the Junior Varsity team. The next year, I played as a backup 
     for the varsity team, under one of the senior goalkeepers. As a junior, I am currently the starting keeper for the team, with a save rate of 0.8 and a shutout rate of 0.5.</p>
   
-  <p> Outside of league play, my past teams have rarely attended tournaments (Surf, Showcase, and the like); this is definitely an experience I am excited to experience given my participation in soccer during college. </p>
+  <p> Outside of league play, my past teams have rarely attended tournaments (Surf, Showcase, and the like); this is definitely an experience I am excited to have given my participation in soccer during college. </p>
     
 <h3 align = "center"> Values/Philosophies </h3>
   
