--- a/soccer.html
+++ b/soccer.html
@@ -49,7 +49,7 @@
   Some of these clips in here might be from my training, mostly because of how short the scholastic season is. </p>
   
 <video class = 'center' width="320" height="240" autoplay>
-  <source src="gunn1.mov" type="video/mov">
+  <source src="gunn1.mov" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 
