--- a/soccer.html
+++ b/soccer.html
@@ -48,10 +48,10 @@
   <p> Unfortunately, I only have media from my current season of school soccer; this season, our coach purchased Hudl to facilitate video recording of games. Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate montage, or something. 
   Some of these clips in here might be from my training, mostly because of how short the scholastic season is. </p>
   
-<video align = 'center' width="640" height="480" controls>
+<center><video align = 'center' width="640" height="480" controls>
   <source src="gunn1.mp4" type="video/mp4">
 Your browser does not support the video tag.
-</video>
+  </video></center>
 
 
 
