--- a/soccer.html
+++ b/soccer.html
@@ -5,6 +5,9 @@
   <title>website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+  <script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
 </head>
 
 <body>
@@ -38,7 +41,7 @@
     
 <h3 align = "center"> Values/Philosophies </h3>
   
-  <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the Nth best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
+  <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the $$N$$th best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
     quite circumstantial, and I hesitate to make such associated judgments. What I do think is notable, however, is my general approach to the position.</p>
   <p> My vision of the keeper position derives from the "field player first, keeper second" mentality. Goalkeeping is uncannily like playing fullback with the extra privilege of the hands. A fullback throughout a game will receive many passes from 
     their forwards, mids, etc. I like to encourage the team to treat me similarly as means of achieving depth. Similarly, that means attacking through balls played by the opponent, even if it demands the feet. I like to think of the ability to use hands
