--- a/soccer.html
+++ b/soccer.html
@@ -55,7 +55,24 @@
   <source src="gunn1.mp4" type="video/mp4">
 Your browser does not support the video tag.
   </video></center>
+ 
+<center><video align = 'center' width="640" height="480" controls>
+  <source src="gunn2.mp4" type="video/mp4">
+Your browser does not support the video tag.
+  </video></center>
 
-
-
+<center><video align = 'center' width="640" height="480" controls>
+  <source src="fremont1.mp4" type="video/mp4">
+Your browser does not support the video tag.
+  </video></center>
+  
+<center><video align = 'center' width="640" height="480" controls>
+  <source src="lynbrook1.mp4" type="video/mp4">
+Your browser does not support the video tag.
+  </video></center>
+  
+<center><video align = 'center' width="640" height="480" controls>
+  <source src="lynbrook2.mp4" type="video/mp4">
+Your browser does not support the video tag.
+  </video></center>
 </body></html>
