--- a/soccer.html
+++ b/soccer.html
@@ -21,11 +21,16 @@
   
   
 <h2 align = "center"> Soccer </h2>
+<figure>
+ <img src="soccer.png" style = "width: 600px; height : 500px">
+ <figcaption>
+ Caption
+ </figcaption>
+</figure>
 
-  
 <p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
   "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
-  
+
 <h3 align = "center"> Background </h3>
   
   <p> I have been playing soccer as a goalkeeper for close to 10 years now. For the majority of this decade, I have played club soccer with De Anza Force. 
