--- a/soccer.html
+++ b/soccer.html
@@ -19,14 +19,15 @@
   <a href="other.html">Other Stuff</a>  
   </div>
   
-  
+  <center>
 <h2 align = "center"> Soccer </h2>
 <figure>
- <img src="soccer.png" style = "width: 600px; height : 500px">
+ <img src="soccer.png" style = "width: 535px; height : 363px">
  <figcaption>
  Caption
  </figcaption>
 </figure>
+  </center>
 
 <p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
   "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
