--- a/soccer.html
+++ b/soccer.html
@@ -24,7 +24,7 @@
 <center><figure>
  <img src="soccer.png" style = "width: 535px; height : 363px">
  <figcaption>
- Caption
+ My school team before a home game against Fremont High School (Jan 9, 2018).
  </figcaption>
 </figure></center>
 
