--- a/soccer.html
+++ b/soccer.html
@@ -27,7 +27,10 @@
  My school team before a home game against Fremont High School (Jan 9, 2018).
  </figcaption>
 </figure></center>
-
+  
+<div style="display: none;" id="hiddenText">This is hidden</div>
+<a href="#" onclick="document.getElementById('hiddenText').style.display="block"; return false;">Click here to show hidden text</a>
+  
 <p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
   "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
 
