--- a/soccer.html
+++ b/soccer.html
@@ -27,9 +27,18 @@
  My school team before a home game against Fremont High School (Jan 9, 2018).
  </figcaption>
 </figure></center>
-  
-<div style="display: none;" id="hiddenText">This is hidden</div>
-<a href="#" onclick="document.getElementById('hiddenText').style.display="block"; return false;">Click here to show hidden text</a>
+
+<div class="subscribe">
+	<div>Subscribe to this website</div>
+	<form action="http://feedburner.google.com/fb/a/mailverify" method="post" target="popupwindow" onsubmit="window.open('http://feedburner.google.com/fb/a/mailverify?uri=alexcican', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true" >
+		<p>
+			<input type="text" class="email_field" name="email" size="18" value="E-mail address" />
+			<input type="hidden" value="alexcican" name="uri" />
+			<input type="hidden" name="loc" value="en_US" />
+			<input class="email_btn" name="submit" type="submit" value="Done" />
+		</p>
+	</form>
+</div>
   
 <p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
   "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
