--- a/soccer.html
+++ b/soccer.html
@@ -28,6 +28,15 @@
  </figcaption>
 </figure></center>
 
+<div class="text_container visible">
+<h2>This is a third title...</h2>
+<div>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam blandit, eros id adipiscing congue, lorem ante sagittis
+elit, id malesuada nibh est sed orci</p>
+<p>Semper. Morbi ultrices fringilla nibh, vel sodales turpis sodales id. Curabitur id ultricies felis. Quisque varius
+feugiat magna, id scelerisque justo sodales eu. In hac habitasse platea dictumst.</p>
+</div>
+</div>
 <div class="text_container">
 	<h3>This is a third title...</h3>
 	<div><!--div that we want to hide-->
