--- a/soccer.html
+++ b/soccer.html
@@ -21,6 +21,15 @@
   
 
 <h2 align = "center"> Soccer </h2>
+	
+<div id="learnHTML" class = "hidden">
+<h3>Learn HTML</h3>
+<ul>
+<li><a href="http://webdesign.lifewire.com/c/ec/9.htm">Free HTML Class</a></li>
+<li><a href="http://webdesign.lifewire.com/od/beginningtutorials/a/bl_htmltutorial.htm">HTML Tutorial</a></li>
+<li><a href="http://webdesign.lifewire.com/cs/xhtmlxml/a/aa013100a.htm">What is XHTML?</a></li>
+</ul>
+</div>
 <center><figure>
  <img src="soccer.png" style = "width: 535px; height : 363px">
  <figcaption>
