--- a/soccer.html
+++ b/soccer.html
@@ -94,21 +94,13 @@ Your browser does not support the video tag.
   
 
 <script type="text/javascript">
-	$(document).ready(function(){
-		$('.text_container').addClass("hidden");
-
-		$('.text_container').click(function() {
-			var $this = $(this);
-
-			if ($this.hasClass("hidden")) {
-				$(this).removeClass("hidden").addClass("visible");
-
-			} else {
-				$(this).removeClass("visible").addClass("hidden");
-			}
-		});
-	});
-</script>
+function unhide(divID) {
+var item = document.getElementById(divID);
+if (item) {
+item.className=(item.className=='hidden')?'unhidden':'hidden';
+}
+}
+</script> 
 
 </body></html>
 
