--- a/soccer.html
+++ b/soccer.html
@@ -22,7 +22,7 @@
 
 <h2 align = "center"> Soccer </h2>
 	
-<div id="learnHTML" class = "hidden">
+<div id="javascript:unhide('learnHTML');" class = "hidden">
 <h3>Learn HTML</h3>
 <ul>
 <li><a href="http://webdesign.lifewire.com/c/ec/9.htm">Free HTML Class</a></li>
