--- a/soccer.html
+++ b/soccer.html
@@ -30,7 +30,7 @@
 <h2 align = "center"> Soccer </h2>
 	
 	
-<button onclick = "toggle_div_fun('sectiontohide');> Click here </button>
+<button onclick = "toggle_div_fun('sectiontohide');"> Click here </button>
 <div id = "sectiontohide"> This is the div </div>
 
 <center><figure>
