--- a/soccer.html
+++ b/soccer.html
@@ -30,8 +30,8 @@
 <h2 align = "center"> Soccer </h2>
 	
 	
-<button onclick = "toggle_div_fun('sectiontohide');"> Click here </button>
-<div id = "sectiontohide"> This is the div </div>
+<center><button onclick = "toggle_div_fun('sectiontohide');"> Click here </button>
+	<div id = "sectiontohide"> This is the div </div></center>
 
 <center><figure>
  <img src="soccer.png" style = "width: 535px; height : 363px">
@@ -41,13 +41,12 @@
 </figure></center>
 
 	
-<p> [hide] bla bla bla bla [/hide]</p>
 <p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
   "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
 
 <h3 align = "center"> Background </h3>
-  
-  <p> I have been playing soccer as a goalkeeper for close to 10 years now. For the majority of this decade, I have played club soccer with De Anza Force. 
+  <center><button onclick = "toggle_div_fun('sectiontohide');"> Click here to view </button>
+	<div id = "sectiontohide"> <p> I have been playing soccer as a goalkeeper for close to 10 years now. For the majority of this decade, I have played club soccer with De Anza Force. 
     Throughout middle school, I developed greatly through the program's rigorous goalkeeper training, both via clinics and integration with the team.
     When I entered high school, I began to take the sport more seriously, and tried out for the Force I team, which played in Premier at the time. I was very fortunate
     to be accepted on the team and train with the team as well as the Force Academy. Through such training, I have played with and against some of the most talented
@@ -56,16 +55,18 @@
   <p> I also play school soccer for my high school, Monta Vista. During my freshman year, I was the goalie for the Junior Varsity team. The next year, I played as a backup 
     for the varsity team, under one of the senior goalkeepers. As a junior, I am currently the starting keeper for the team, with a save rate of 0.8 and a shutout rate of 0.5.</p>
   
-  <p> Outside of league play, my past teams have rarely attended tournaments (Surf, Showcase, and the like); this is definitely an experience I am excited to have given my participation in soccer during college. </p>
+  <p> Outside of league play, my past teams have rarely attended tournaments (Surf, Showcase, and the like); this is definitely an experience I am excited to have given my participation in soccer during college. </p> </div></center>
+  
     
 <h3 align = "center"> Values/Philosophies </h3>
-  
-  <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the \(N\)th best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
+  <center><button onclick = "toggle_div_fun('sectiontohide');"> Click here to view </button>
+	<div id = "sectiontohide"> <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the \(N\)th best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
     quite circumstantial, and I hesitate to make such associated judgments. What I do think is notable, however, is my general approach to the position.</p>
   <p> My vision of the keeper position derives from the "field player first, keeper second" mentality. Goalkeeping is uncannily like playing fullback with the extra privilege of the hands. A fullback throughout a game will receive many passes from 
     their forwards, mids, etc. I like to encourage the team to treat me similarly as means of achieving depth. Similarly, that means attacking through balls played by the opponent, even if it demands the feet. I like to think of the ability to use hands
     as a privilege and push myself to make the most out of such privilege. </p>
-  <p> I love to challenge myself by playing possession/passing games with the rest of my team, as it builds the proper technique that I believe is essential to the position itself. Perhaps evidence of such a mentality manifests itself in media.</p>
+  <p> I love to challenge myself by playing possession/passing games with the rest of my team, as it builds the proper technique that I believe is essential to the position itself. Perhaps evidence of such a mentality manifests itself in media.</p> </div></center>
+  
 <h3 align = "center"> Media </h3>
   <p> Unfortunately, I only have media from my current season of school soccer; this season, our coach purchased Hudl to facilitate video recording of games. Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate montage, or something. 
   Some of these clips in here might be from my training, mostly because of how short the scholastic season is. </p>
