--- a/soccer.html
+++ b/soccer.html
@@ -45,8 +45,8 @@
   "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
 
 <h3 align = "center"> Background </h3>
-  <center><button onclick = "toggle_div_fun('sectiontohide');"> Click here to view </button>
-	<div id = "sectiontohide"> <p> I have been playing soccer as a goalkeeper for close to 10 years now. For the majority of this decade, I have played club soccer with De Anza Force. 
+  <center><button onclick = "toggle_div_fun('sectiontohide1');"> Click here to view </button>
+	<div id = "sectiontohide1"> <p> I have been playing soccer as a goalkeeper for close to 10 years now. For the majority of this decade, I have played club soccer with De Anza Force. 
     Throughout middle school, I developed greatly through the program's rigorous goalkeeper training, both via clinics and integration with the team.
     When I entered high school, I began to take the sport more seriously, and tried out for the Force I team, which played in Premier at the time. I was very fortunate
     to be accepted on the team and train with the team as well as the Force Academy. Through such training, I have played with and against some of the most talented
@@ -59,8 +59,8 @@
   
     
 <h3 align = "center"> Values/Philosophies </h3>
-  <center><button onclick = "toggle_div_fun('sectiontohide');"> Click here to view </button>
-	<div id = "sectiontohide"> <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the \(N\)th best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
+  <center><button onclick = "toggle_div_fun('sectiontohide2');"> Click here to view </button>
+	<div id = "sectiontohide2"> <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the \(N\)th best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
     quite circumstantial, and I hesitate to make such associated judgments. What I do think is notable, however, is my general approach to the position.</p>
   <p> My vision of the keeper position derives from the "field player first, keeper second" mentality. Goalkeeping is uncannily like playing fullback with the extra privilege of the hands. A fullback throughout a game will receive many passes from 
     their forwards, mids, etc. I like to encourage the team to treat me similarly as means of achieving depth. Similarly, that means attacking through balls played by the opponent, even if it demands the feet. I like to think of the ability to use hands
