--- a/soccer.html
+++ b/soccer.html
@@ -30,7 +30,7 @@
 <h2 align = "center"> Soccer </h2>
 	
 	
-<center><button onclick = "toggle_div_fun('sectiontohide');"> Click here </button>
+<center><button onclick = "toggle_div_fun('sectiontohide');"> Click here to view</button>
 	<div id = "sectiontohide"> This is the div </div></center>
 
 <center><figure>
